deploy/overlays/visual-analytics/basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: studio-auth
  namespace: ceramics
spec:
  basicAuth:
    secret: studio-auth-users
