deploy/overlays/visual-analytics/middleware-oauth2-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: ceramics
spec:
  forwardAuth:
    address: http://oauth2-proxy.ceramics.svc.cluster.local/
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
