deploy/overlays/visual-analytics/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pottery
  namespace: ceramics
spec:
  template:
    spec:
      containers:
        - name: pottery
