deploy/overlays/visual-analytics/patch-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pottery
  namespace: ceramics
spec:
  routes:
    - match: Host(`ceramics.platform.visari.org`) || HostRegexp(`^[a-z]+-[a-z]+-(clay|bat|vent)\.ceramics\.platform\.visari\.org$`)
      kind: Rule
      services:
        - name: pottery
          port: 80
    - match: HostRegexp(`^[a-z]+-[a-z]+-glaze\.ceramics\.platform\.visari\.org$`)
      kind: Rule
      services:
        - name: pottery
          port: 80
  tls:
    certResolver: letsencrypt
